# Pisces

./: CMakeLists.txt  ChangeLog.txt
batch/: debug_x86_01_build.bat  debug_x86_02_copy.bat  debug_x86_03_deployqt.bat
reader/: index.html  index.orig.html
src/: CMakeLists.txt  PiscesConstants.h  PiscesFeatures.h  main.cpp
src/formFiles/: MainWindow.ui
src/mainUI/: FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h
src/misc/: RequestMapper.cpp  RequestMapper.h  SettingData.cpp  SettingData.h  Utility.cpp  Utility.h
src/resFiles/: resources.qrc
